# Chords-Python

./: .appletviewer  .bash_history  .c  .gitconfig  .gitignore  .packettracer  BioAmp_CSV_Plotter.py  ECG.ipynb  LICENSE  MANIFEST.in  README.md  app.py  app_requirements.txt  beetle.py  bioamptool.py  chords.py  chords_ble.py  chords_requirements.txt  chords_serial.py  chords_wifi.py  connection.py  csvplotter.py  desktop.ini  emgenvelope.py  eog.py  ffteeg.py  game.py  gui.py  heartbeat_ecg.py  keystroke.py  npg-ble  npg-ble.py  npg.py  npg_wifi.py  one.py  pyproject.toml  requirements.txt  stream.py  testing.py
.BrainVision LSL Viewer/: preferences.xml
.VirtualBox/: VBoxSVC.log.1  VBoxSVC.log.10  VBoxSVC.log.2  VBoxSVC.log.3  VBoxSVC.log.4  VBoxSVC.log.5  VBoxSVC.log.6  VBoxSVC.log.7  VBoxSVC.log.8  VBoxSVC.log.9  VirtualBox.xml  selectorwindow.log.1  selectorwindow.log.10  selectorwindow.log.2  selectorwindow.log.3  selectorwindow.log.5  selectorwindow.log.6  selectorwindow.log.7  selectorwindow.log.8  selectorwindow.log.9
.arduinoIDE/: arduino-cli.yaml  pluggable-monitor-settings.json  recent-sketches.json  recentworkspace.json  settings.json
.conda/: aau_token
.ipynb_checkpoints/: Arduino-checkpoint.py  ArduinoChannels-checkpoint.ipynb  ArduinoPlot-checkpoint.ipynb  AudioVisualization-checkpoint.ipynb  CodeAudioVisualization-checkpoint.ipynb  CodeSentimentAnalysis-checkpoint.ipynb  CodeTranslator-checkpoint.ipynb  ECG-checkpoint.ipynb  Helping Hand Project-checkpoint.ipynb  Project Helping Hands-checkpoint.ipynb  Python Programming - Basics-checkpoint.ipynb  Python Programming - Intermediate Questions-checkpoint.ipynb  Sentiment-checkpoint.py  arduino_data_logger.-checkpoint.py  arg-checkpoint.py  async-checkpoint.py  bioamptool-checkpoint.py  chord-checkpoint.py  greeting-checkpoint.py  mymodule-checkpoint.py  thread-checkpoint.py
.jupyter/: migrated
.matplotlib/: fontlist-v330.json  fontlist-v390.json
.virtual_documents/: Untitled.ipynb
Notebooks/: ECG.ipynb  ecg_sample.csv  emg.ipynb  (+1 more)
(+82 files in other folders)
