[tool.poetry]
name = "chordspy"
version = "0.1.0"
description = "An open source bag of tools for recording and visualizing Bio-potential signals like EEG, ECG, EMG, or EOG."
authors = ["Upside Down Labs <chords@upsidedownlabs.tech>"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/upsidedownlabs/Chords-Python"
packages = [{include = "chordspy"}]
include = ["chordspy/config/*.yaml", "chordspy/static/*", "chordspy/templates/*", "chordspy/apps/*.py"]

[tool.poetry.dependencies]
python = ">=3.10,<3.14"
numpy="2.1.3"
pylsl="1.16.2"
pyserial="3.5"
bleak="0.22.3"
pyqtgraph="0.13.7"
PyQt5="5.15.11"
keyboard="0.13.5"
scipy="1.14.1"
pygame="2.6.1"
neurokit2="0.2.10"
plotly="5.24.1"
pandas="2.2.3"
tk="0.1.0"
PyAutoGUI="0.9.54"
Flask="3.1.1"
psutil="6.1.1"
websocket-client="1.8.0"
PyYAML="6.0.2"

[tool.poetry.scripts]
chordspy = "chordspy.app:main"

[tool.poetry.urls]
Homepage = "https://github.com/upsidedownlabs/Chords-Python"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
